[package]
name = "xdg-shell-wrapper"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = [
    "use_system_lib",
    "desktop",
    "backend_egl",
    "backend_drm",
    "renderer_gl",
], rev = "49ba425" }
# smithay = { path = "../smithay", default-features = false, features = ["use_system_lib", "desktop", "backend_egl", "backend_drm", "renderer_gl"] }
# sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = ["calloop", "xkbcommon"] }
sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = [
    "calloop",
    "xkbcommon",
], rev = "3bed072" }
cctk = { package = "cosmic-client-toolkit", git = "https://github.com/pop-os/cosmic-protocols", rev = "e65fa5e" }
wayland-backend = { version = "0.3.2", features = ["client_system"] }
wayland-protocols = { version = "0.31.0", features = ["staging"] }
tracing = "0.1.37"
# sctk = { package = "smithay-client-toolkit", path = "../fork/client-toolkit", default-features = false, features = ["calloop", "xkbcommon"] }
anyhow = "1.0.53"
ron = "0.8.0"
serde = { version = "1.0.136", features = ["derive"] }
wayland-egl = { version = "0.32.0" }
libc = "0.2.117"
tempfile = "3.3"
once_cell = "1.10.0"
itertools = "0.12.0"
shlex = "1.1.0"
xdg-shell-wrapper-config = { path = "xdg-shell-wrapper-config" }
rustix = "0.38"
rand = "0.8.5"

[workspace]
members = ["xdg-shell-wrapper-config"]

[patch."https://github.com/Smithay/client-toolkit"]
sctk = { git = "https://github.com/smithay/client-toolkit//", package = "smithay-client-toolkit", features = [
    "calloop",
    "xkbcommon",
] }
