[package]
name = "simple-wrapper-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-wrapper"
path = "src/main.rs"

[dependencies]
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = ["use_system_lib", "desktop", "backend_egl", "backend_drm", "renderer_gl", "slog-stdlog"] }
# smithay = { path = "../../smithay", default-features = false, features = ["use_system_lib", "desktop", "backend_egl", "backend_drm", "renderer_gl", "slog-stdlog"] }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/wash2/client-toolkit.git", default-features = false, features = ["calloop"] }
# sctk = { package = "smithay-client-toolkit", path = "../../client-toolkit", default-features = false, features = ["calloop"] }
anyhow = "1.0.53"
shlex = "1.1.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.8.1"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
libc = "0.2.117"
freedesktop-desktop-entry = "0.5.0"
xdg = "2.4.0"
itertools = "0.10.3"
wayland-egl = "0.29.4"
simple-wrapper-config = { path = "../simple-wrapper-config" }
xdg-shell-wrapper = { path = "../xdg-shell-wrapper" }
